--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Sagar saini's portfolio</h1>
     <h2>I'm a Web Developer </h2>
     <hr>
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"><h2>Movie ranking Project</h2></a>
+    <a href="./public/movie-ranking.html"><h2>Movie ranking Project</h2></a>
     <img src="./public/assets/images/Screenshot 2024-06-27 125221.png" height="200px" alt="movie ranking list">
-    <a  href="../3.4 Birthday Invite Project/index.html"><h2>Birthda invite project</h2></a>
+    <a  href="./public/birthday-invite.html"><h2>Birthda invite project</h2></a>
     <img src="./public/assets/images/Screenshot 2024-06-29 120647.png" height="200px" alt="birthday project">
     <hr>
     <a href="./public/about.html">About me</a>
