--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <img src="./public/assets/images/Screenshot 2024-06-27 125221.png" height="200px" alt="movie ranking list">
     <a  href="./public/birthday-invite.html"><h2>Birthda invite project</h2></a>
     <img src="./public/assets/images/Screenshot 2024-06-29 120647.png" height="200px" alt="birthday project">
+     <a href="./public/resume/index.html"><h2>My Resume Project</h2></a>
+    <img src="./public/assets/images/resume.png" height="200px" alt="My Resume">
     <hr>
     <a href="./public/about.html">About me</a>
     <a href="./public/contact.html">Contact me</a>
